--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "airapi-cli",
-  "version": "2.5.0",
+  "version": "2.4.6",
   "description": "a tool for generate api doc",
   "main": "index.js",
   "bin": {
@@ -21,7 +21,7 @@
   "bugs": {
     "url": "https://github.com/ACOTeam/airapi-cli/issues"
   },
-  "homepage": "https://github.com/aircode/airapi-cli#README",
+  "homepage": "https://github.com/ACOTeam/airapi-cli#README",
   "dependencies": {
     "airapi-web": "^2.1.0",
     "babel-polyfill": "^6.23.0",
